# timon_pyo3

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.env/: pyvenv.cfg
github/workflows/: publish.yml
src/: lib.py  lib.rs
