[package]
name = "timon_pyo3"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "timon_pyo3"
crate-type = ["cdylib", "lib"]

[dependencies]
pyo3 = "0.23.4"
tokio = { version = "1.43.0", features = ["full"] }
lazy_static = { version = "1.5.0"}
pyo3-arrow = "0.7.2"
arrow-array = "54.2.1"
tsdb_timon = { version = "1.1.0" }
